# cpp_cmake_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build.sh  _configure.sh  _run.sh  _run_tests.sh  archive  backlog  recompile_and_run.sh
code/headers/: event_dispatcher.h
code/hellovertex_cmake_modules/: package_debian.cmake  print_properties_of_target.cmake
code/source_files/: event_dispatcher.cc  main.cc
code/sources/: event_dispatcher.cc  glad.c  main.cc  notes.txt
src/: CMakeLists.txt  main.cpp
src/hellovertex_cmake_modules/: log_cmake_commands.cmake
tests/: CMakeLists.txt  test_dispatcher.cc  tests_main.cc
toolchains/: Toolchain-x86_64-w64-mingw32.cmake
